# H3API

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
include/h3api/: CMakeLists.txt  H3AI.hpp  H3AdventureMap.hpp  H3Artifacts.hpp  H3Assets.hpp  H3Base.hpp  H3Campaign.hpp  H3Combat.hpp  H3Constants.hpp  H3Containers.hpp  H3Creatures.hpp  H3Defines.hpp  H3DialogControls.hpp  H3Dialogs.hpp  H3GameData.hpp  H3GzWrapper.hpp  H3Heroes.hpp  H3Managers.hpp  H3Players.hpp  H3RMG.hpp  H3Skills.hpp  H3Towns.hpp  H3Utilities.hpp  H3Version.hpp  PreprocessorCleanup.hpp  Readme.md
include/h3api/H3AI/: CMakeLists.txt  H3PathNode.cpp  H3PathNode.hpp  H3Pathfinder.cpp  H3Pathfinder.hpp  H3SimulatedCombat.cpp  H3SimulatedCombat.hpp  H3SimulatedCreature.cpp  H3SimulatedCreature.hpp  H3SimulatedHero.cpp  H3SimulatedHero.hpp  H3SimulatedSpell.cpp  H3SimulatedSpell.hpp  H3SpellCastInfo.cpp  H3SpellCastInfo.hpp  H3SpellData.cpp  H3SpellData.hpp
include/h3api/H3AdventureMap/: CMakeLists.txt  H3GlobalObjectSettings.cpp  H3GlobalObjectSettings.hpp  H3MapArtifact.cpp  H3MapArtifact.hpp  H3MapBlackMarket.cpp  H3MapBlackMarket.hpp  H3MapBoat.cpp  H3MapBoat.hpp  H3MapCampfire.cpp  H3MapCampfire.hpp  H3MapCorpse.cpp  H3MapCorpse.hpp  H3MapCreatureBank.cpp  H3MapCreatureBank.hpp  H3MapEvent.cpp  H3MapEvent.hpp  H3MapFlotsam.cpp  H3MapFlotsam.hpp  H3MapFountainFortune.cpp  H3MapFountainFortune.hpp  H3MapGarrison.cpp  H3MapGarrison.hpp  H3MapGenerator.cpp  H3MapGenerator.hpp  H3MapHero.cpp  H3MapHero.hpp  H3MapItems.cpp  H3MapItems.hpp  H3MapLeanTo.cpp  H3MapLeanTo.hpp  H3MapLearningStone.cpp  H3MapLearningStone.hpp  H3MapLighthouse.cpp  H3MapLighthouse.hpp  H3MapMagicShrine.cpp  H3MapMagicShrine.hpp  H3MapMagicSpring.cpp  H3MapMagicSpring.hpp  H3MapMine.cpp  (+61 more)
include/h3api/H3Artifacts/: CMakeLists.txt  H3Artifact.cpp  H3Artifact.hpp  H3ArtifactSetup.cpp  H3ArtifactSetup.hpp  (+2 more)
(+379 files in other folders)
